// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Renders the UI snapshot correctly 1`] = `
<label
  className="css-0"
  htmlFor="some-input-id"
  id="label"
>
  Cupcakes
</label>
`;

exports[`Label Renders the UI snapshot correctly 2`] = `
<label
  className="css-0"
  htmlFor="some-input-id"
  id="label3"
>
  Cupcakes
  <span>
     (Required)
  </span>
</label>
`;
